fixed hamburger on mobile menu

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -99,6 +99,12 @@ nav {
   color: #f1f2f6;
 }
 
+.collapse .nav-links, .collapsing .nav-links {
+  flex-direction: column;
+  align-items:flex-end;
+  justify-content:flex-end;
+}
+
 /***************
      HERO
 ***************/
